parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> language
Rule 2     start -> empty
Rule 3     language -> language NEWLINE line
Rule 4     language -> line
Rule 5     line -> expression
Rule 6     line -> var_assign
Rule 7     line -> func_assign
Rule 8     line -> iterative
Rule 9     line -> conditional
Rule 10    line -> output
Rule 11    line -> input
Rule 12    line -> empty
Rule 13    func_assign -> datatype NAME LPAREN parameters RPAREN START NEWLINE language return_stmt STOP
Rule 14    return_stmt -> RETURN expression NEWLINE
Rule 15    return_stmt -> RETURN NEWLINE
Rule 16    return_stmt -> empty
Rule 17    parameters -> first_param
Rule 18    parameters -> empty
Rule 19    first_param -> datatype NAME COMMA first_param
Rule 20    first_param -> datatype NAME
Rule 21    datatype -> INT_TYPE
Rule 22    datatype -> FLOAT_TYPE
Rule 23    datatype -> STRING_TYPE
Rule 24    datatype -> VOID_TYPE
Rule 25    input -> READ LPAREN NAME RPAREN
Rule 26    output -> output_print
Rule 27    output_print -> PRINT LPAREN expression RPAREN
Rule 28    expression -> NAME
Rule 29    var_assign -> NAME EQUALS expression
Rule 30    expression -> expression_operation
Rule 31    expression_operation -> expression MULTIPLY expression
Rule 32    expression_operation -> expression DIVIDE expression
Rule 33    expression_operation -> expression MODULO expression
Rule 34    expression_operation -> expression PLUS expression
Rule 35    expression_operation -> expression MINUS expression
Rule 36    expression_operation -> expression LD expression
Rule 37    expression_operation -> expression LDEQ expression
Rule 38    expression_operation -> expression GD expression
Rule 39    expression_operation -> expression GDEQ expression
Rule 40    expression_operation -> expression EQUALEQUAL expression
Rule 41    expression_operation -> expression NOTEQ expression
Rule 42    expression_operation -> expression AND expression
Rule 43    expression_operation -> expression OR expression
Rule 44    expression_operation -> NOT expression
Rule 45    expression -> INT
Rule 46    expression -> FLOAT
Rule 47    expression -> STRING
Rule 48    expression -> TRUE
Rule 49    expression -> FALSE
Rule 50    expression -> LBRACE int_type_array RBRACE
Rule 51    expression -> LBRACE float_type_array RBRACE
Rule 52    expression -> LBRACE string_type_array RBRACE
Rule 53    expression -> LBRACE bool_type_array RBRACE
Rule 54    int_type_array -> empty
Rule 55    int_type_array -> INT int_type_array
Rule 56    float_type_array -> empty
Rule 57    float_type_array -> FLOAT float_type_array
Rule 58    string_type_array -> empty
Rule 59    string_type_array -> STRING string_type_array
Rule 60    bool_type_array -> empty
Rule 61    bool_type_array -> TRUE bool_type_array
Rule 62    bool_type_array -> FALSE bool_type_array
Rule 63    expression -> LPAREN expression RPAREN
Rule 64    conditional -> IF expression START NEWLINE language STOP else_if_blocks else_block
Rule 65    else_if_blocks -> empty
Rule 66    else_if_blocks -> else_if_blocks else_if_block
Rule 67    else_if_block -> ELSE_IF expression START NEWLINE language STOP
Rule 68    else_block -> ELSE START NEWLINE language STOP
Rule 69    else_block -> empty
Rule 70    iterative -> WHILE expression START NEWLINE language STOP
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AND                  : 42
COMMA                : 19
DIVIDE               : 32
ELSE                 : 68
ELSE_IF              : 67
EQUALEQUAL           : 40
EQUALS               : 29
FALSE                : 49 62
FLOAT                : 46 57
FLOAT_TYPE           : 22
GD                   : 38
GDEQ                 : 39
IF                   : 64
INT                  : 45 55
INT_TYPE             : 21
LBRACE               : 50 51 52 53
LD                   : 36
LDEQ                 : 37
LPAREN               : 13 25 27 63
MINUS                : 35
MODULO               : 33
MULTIPLY             : 31
NAME                 : 13 19 20 25 28 29
NEWLINE              : 3 13 14 15 64 67 68 70
NOT                  : 44
NOTEQ                : 41
OR                   : 43
PLUS                 : 34
PRINT                : 27
RBRACE               : 50 51 52 53
READ                 : 25
RETURN               : 14 15
RPAREN               : 13 25 27 63
START                : 13 64 67 68 70
STOP                 : 13 64 67 68 70
STRING               : 47 59
STRING_TYPE          : 23
TRUE                 : 48 61
VOID_TYPE            : 24
WHILE                : 70
error                : 

Nonterminals, with rules where they appear

bool_type_array      : 53 61 62
conditional          : 9
datatype             : 13 19 20
else_block           : 64
else_if_block        : 66
else_if_blocks       : 64 66
empty                : 2 12 16 18 54 56 58 60 65 69
expression           : 5 14 27 29 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 63 64 67 70
expression_operation : 30
first_param          : 17 19
float_type_array     : 51 57
func_assign          : 7
input                : 11
int_type_array       : 50 55
iterative            : 8
language             : 1 3 13 64 67 68 70
line                 : 3 4
output               : 10
output_print         : 26
parameters           : 13
return_stmt          : 13
start                : 0
string_type_array    : 52 59
var_assign           : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . language
    (2) start -> . empty
    (3) language -> . language NEWLINE line
    (4) language -> . line
    (71) empty -> .
    (5) line -> . expression
    (6) line -> . var_assign
    (7) line -> . func_assign
    (8) line -> . iterative
    (9) line -> . conditional
    (10) line -> . output
    (11) line -> . input
    (12) line -> . empty
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (29) var_assign -> . NAME EQUALS expression
    (13) func_assign -> . datatype NAME LPAREN parameters RPAREN START NEWLINE language return_stmt STOP
    (70) iterative -> . WHILE expression START NEWLINE language STOP
    (64) conditional -> . IF expression START NEWLINE language STOP else_if_blocks else_block
    (26) output -> . output_print
    (25) input -> . READ LPAREN NAME RPAREN
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression
    (21) datatype -> . INT_TYPE
    (22) datatype -> . FLOAT_TYPE
    (23) datatype -> . STRING_TYPE
    (24) datatype -> . VOID_TYPE
    (27) output_print -> . PRINT LPAREN expression RPAREN

    $end            reduce using rule 71 (empty -> .)
    NEWLINE         reduce using rule 71 (empty -> .)
    NAME            shift and go to state 12
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LBRACE          shift and go to state 19
    LPAREN          shift and go to state 20
    WHILE           shift and go to state 22
    IF              shift and go to state 23
    READ            shift and go to state 25
    NOT             shift and go to state 26
    INT_TYPE        shift and go to state 27
    FLOAT_TYPE      shift and go to state 28
    STRING_TYPE     shift and go to state 29
    VOID_TYPE       shift and go to state 30
    PRINT           shift and go to state 31

    start                          shift and go to state 1
    language                       shift and go to state 2
    empty                          shift and go to state 3
    line                           shift and go to state 4
    expression                     shift and go to state 5
    var_assign                     shift and go to state 6
    func_assign                    shift and go to state 7
    iterative                      shift and go to state 8
    conditional                    shift and go to state 9
    output                         shift and go to state 10
    input                          shift and go to state 11
    expression_operation           shift and go to state 13
    datatype                       shift and go to state 21
    output_print                   shift and go to state 24

state 1

    (0) S' -> start .



state 2

    (1) start -> language .
    (3) language -> language . NEWLINE line

    $end            reduce using rule 1 (start -> language .)
    NEWLINE         shift and go to state 32


state 3

    (2) start -> empty .
    (12) line -> empty .

  ! reduce/reduce conflict for $end resolved using rule 2 (start -> empty .)
    $end            reduce using rule 2 (start -> empty .)
    NEWLINE         reduce using rule 12 (line -> empty .)

  ! $end            [ reduce using rule 12 (line -> empty .) ]


state 4

    (4) language -> line .

    NEWLINE         reduce using rule 4 (language -> line .)
    $end            reduce using rule 4 (language -> line .)
    STOP            reduce using rule 4 (language -> line .)
    RETURN          reduce using rule 4 (language -> line .)


state 5

    (5) line -> expression .
    (31) expression_operation -> expression . MULTIPLY expression
    (32) expression_operation -> expression . DIVIDE expression
    (33) expression_operation -> expression . MODULO expression
    (34) expression_operation -> expression . PLUS expression
    (35) expression_operation -> expression . MINUS expression
    (36) expression_operation -> expression . LD expression
    (37) expression_operation -> expression . LDEQ expression
    (38) expression_operation -> expression . GD expression
    (39) expression_operation -> expression . GDEQ expression
    (40) expression_operation -> expression . EQUALEQUAL expression
    (41) expression_operation -> expression . NOTEQ expression
    (42) expression_operation -> expression . AND expression
    (43) expression_operation -> expression . OR expression

    NEWLINE         reduce using rule 5 (line -> expression .)
    $end            reduce using rule 5 (line -> expression .)
    STOP            reduce using rule 5 (line -> expression .)
    RETURN          reduce using rule 5 (line -> expression .)
    MULTIPLY        shift and go to state 33
    DIVIDE          shift and go to state 34
    MODULO          shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    LD              shift and go to state 38
    LDEQ            shift and go to state 39
    GD              shift and go to state 40
    GDEQ            shift and go to state 41
    EQUALEQUAL      shift and go to state 42
    NOTEQ           shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45


state 6

    (6) line -> var_assign .

    NEWLINE         reduce using rule 6 (line -> var_assign .)
    $end            reduce using rule 6 (line -> var_assign .)
    STOP            reduce using rule 6 (line -> var_assign .)
    RETURN          reduce using rule 6 (line -> var_assign .)


state 7

    (7) line -> func_assign .

    NEWLINE         reduce using rule 7 (line -> func_assign .)
    $end            reduce using rule 7 (line -> func_assign .)
    STOP            reduce using rule 7 (line -> func_assign .)
    RETURN          reduce using rule 7 (line -> func_assign .)


state 8

    (8) line -> iterative .

    NEWLINE         reduce using rule 8 (line -> iterative .)
    $end            reduce using rule 8 (line -> iterative .)
    STOP            reduce using rule 8 (line -> iterative .)
    RETURN          reduce using rule 8 (line -> iterative .)


state 9

    (9) line -> conditional .

    NEWLINE         reduce using rule 9 (line -> conditional .)
    $end            reduce using rule 9 (line -> conditional .)
    STOP            reduce using rule 9 (line -> conditional .)
    RETURN          reduce using rule 9 (line -> conditional .)


state 10

    (10) line -> output .

    NEWLINE         reduce using rule 10 (line -> output .)
    $end            reduce using rule 10 (line -> output .)
    STOP            reduce using rule 10 (line -> output .)
    RETURN          reduce using rule 10 (line -> output .)


state 11

    (11) line -> input .

    NEWLINE         reduce using rule 11 (line -> input .)
    $end            reduce using rule 11 (line -> input .)
    STOP            reduce using rule 11 (line -> input .)
    RETURN          reduce using rule 11 (line -> input .)


state 12

    (28) expression -> NAME .
    (29) var_assign -> NAME . EQUALS expression

    MULTIPLY        reduce using rule 28 (expression -> NAME .)
    DIVIDE          reduce using rule 28 (expression -> NAME .)
    MODULO          reduce using rule 28 (expression -> NAME .)
    PLUS            reduce using rule 28 (expression -> NAME .)
    MINUS           reduce using rule 28 (expression -> NAME .)
    LD              reduce using rule 28 (expression -> NAME .)
    LDEQ            reduce using rule 28 (expression -> NAME .)
    GD              reduce using rule 28 (expression -> NAME .)
    GDEQ            reduce using rule 28 (expression -> NAME .)
    EQUALEQUAL      reduce using rule 28 (expression -> NAME .)
    NOTEQ           reduce using rule 28 (expression -> NAME .)
    AND             reduce using rule 28 (expression -> NAME .)
    OR              reduce using rule 28 (expression -> NAME .)
    NEWLINE         reduce using rule 28 (expression -> NAME .)
    $end            reduce using rule 28 (expression -> NAME .)
    STOP            reduce using rule 28 (expression -> NAME .)
    RETURN          reduce using rule 28 (expression -> NAME .)
    EQUALS          shift and go to state 46


state 13

    (30) expression -> expression_operation .

    MULTIPLY        reduce using rule 30 (expression -> expression_operation .)
    DIVIDE          reduce using rule 30 (expression -> expression_operation .)
    MODULO          reduce using rule 30 (expression -> expression_operation .)
    PLUS            reduce using rule 30 (expression -> expression_operation .)
    MINUS           reduce using rule 30 (expression -> expression_operation .)
    LD              reduce using rule 30 (expression -> expression_operation .)
    LDEQ            reduce using rule 30 (expression -> expression_operation .)
    GD              reduce using rule 30 (expression -> expression_operation .)
    GDEQ            reduce using rule 30 (expression -> expression_operation .)
    EQUALEQUAL      reduce using rule 30 (expression -> expression_operation .)
    NOTEQ           reduce using rule 30 (expression -> expression_operation .)
    AND             reduce using rule 30 (expression -> expression_operation .)
    OR              reduce using rule 30 (expression -> expression_operation .)
    NEWLINE         reduce using rule 30 (expression -> expression_operation .)
    $end            reduce using rule 30 (expression -> expression_operation .)
    RPAREN          reduce using rule 30 (expression -> expression_operation .)
    START           reduce using rule 30 (expression -> expression_operation .)
    STOP            reduce using rule 30 (expression -> expression_operation .)
    RETURN          reduce using rule 30 (expression -> expression_operation .)


state 14

    (45) expression -> INT .

    MULTIPLY        reduce using rule 45 (expression -> INT .)
    DIVIDE          reduce using rule 45 (expression -> INT .)
    MODULO          reduce using rule 45 (expression -> INT .)
    PLUS            reduce using rule 45 (expression -> INT .)
    MINUS           reduce using rule 45 (expression -> INT .)
    LD              reduce using rule 45 (expression -> INT .)
    LDEQ            reduce using rule 45 (expression -> INT .)
    GD              reduce using rule 45 (expression -> INT .)
    GDEQ            reduce using rule 45 (expression -> INT .)
    EQUALEQUAL      reduce using rule 45 (expression -> INT .)
    NOTEQ           reduce using rule 45 (expression -> INT .)
    AND             reduce using rule 45 (expression -> INT .)
    OR              reduce using rule 45 (expression -> INT .)
    NEWLINE         reduce using rule 45 (expression -> INT .)
    $end            reduce using rule 45 (expression -> INT .)
    RPAREN          reduce using rule 45 (expression -> INT .)
    START           reduce using rule 45 (expression -> INT .)
    STOP            reduce using rule 45 (expression -> INT .)
    RETURN          reduce using rule 45 (expression -> INT .)


state 15

    (46) expression -> FLOAT .

    MULTIPLY        reduce using rule 46 (expression -> FLOAT .)
    DIVIDE          reduce using rule 46 (expression -> FLOAT .)
    MODULO          reduce using rule 46 (expression -> FLOAT .)
    PLUS            reduce using rule 46 (expression -> FLOAT .)
    MINUS           reduce using rule 46 (expression -> FLOAT .)
    LD              reduce using rule 46 (expression -> FLOAT .)
    LDEQ            reduce using rule 46 (expression -> FLOAT .)
    GD              reduce using rule 46 (expression -> FLOAT .)
    GDEQ            reduce using rule 46 (expression -> FLOAT .)
    EQUALEQUAL      reduce using rule 46 (expression -> FLOAT .)
    NOTEQ           reduce using rule 46 (expression -> FLOAT .)
    AND             reduce using rule 46 (expression -> FLOAT .)
    OR              reduce using rule 46 (expression -> FLOAT .)
    NEWLINE         reduce using rule 46 (expression -> FLOAT .)
    $end            reduce using rule 46 (expression -> FLOAT .)
    RPAREN          reduce using rule 46 (expression -> FLOAT .)
    START           reduce using rule 46 (expression -> FLOAT .)
    STOP            reduce using rule 46 (expression -> FLOAT .)
    RETURN          reduce using rule 46 (expression -> FLOAT .)


state 16

    (47) expression -> STRING .

    MULTIPLY        reduce using rule 47 (expression -> STRING .)
    DIVIDE          reduce using rule 47 (expression -> STRING .)
    MODULO          reduce using rule 47 (expression -> STRING .)
    PLUS            reduce using rule 47 (expression -> STRING .)
    MINUS           reduce using rule 47 (expression -> STRING .)
    LD              reduce using rule 47 (expression -> STRING .)
    LDEQ            reduce using rule 47 (expression -> STRING .)
    GD              reduce using rule 47 (expression -> STRING .)
    GDEQ            reduce using rule 47 (expression -> STRING .)
    EQUALEQUAL      reduce using rule 47 (expression -> STRING .)
    NOTEQ           reduce using rule 47 (expression -> STRING .)
    AND             reduce using rule 47 (expression -> STRING .)
    OR              reduce using rule 47 (expression -> STRING .)
    NEWLINE         reduce using rule 47 (expression -> STRING .)
    $end            reduce using rule 47 (expression -> STRING .)
    RPAREN          reduce using rule 47 (expression -> STRING .)
    START           reduce using rule 47 (expression -> STRING .)
    STOP            reduce using rule 47 (expression -> STRING .)
    RETURN          reduce using rule 47 (expression -> STRING .)


state 17

    (48) expression -> TRUE .

    MULTIPLY        reduce using rule 48 (expression -> TRUE .)
    DIVIDE          reduce using rule 48 (expression -> TRUE .)
    MODULO          reduce using rule 48 (expression -> TRUE .)
    PLUS            reduce using rule 48 (expression -> TRUE .)
    MINUS           reduce using rule 48 (expression -> TRUE .)
    LD              reduce using rule 48 (expression -> TRUE .)
    LDEQ            reduce using rule 48 (expression -> TRUE .)
    GD              reduce using rule 48 (expression -> TRUE .)
    GDEQ            reduce using rule 48 (expression -> TRUE .)
    EQUALEQUAL      reduce using rule 48 (expression -> TRUE .)
    NOTEQ           reduce using rule 48 (expression -> TRUE .)
    AND             reduce using rule 48 (expression -> TRUE .)
    OR              reduce using rule 48 (expression -> TRUE .)
    NEWLINE         reduce using rule 48 (expression -> TRUE .)
    $end            reduce using rule 48 (expression -> TRUE .)
    RPAREN          reduce using rule 48 (expression -> TRUE .)
    START           reduce using rule 48 (expression -> TRUE .)
    STOP            reduce using rule 48 (expression -> TRUE .)
    RETURN          reduce using rule 48 (expression -> TRUE .)


state 18

    (49) expression -> FALSE .

    MULTIPLY        reduce using rule 49 (expression -> FALSE .)
    DIVIDE          reduce using rule 49 (expression -> FALSE .)
    MODULO          reduce using rule 49 (expression -> FALSE .)
    PLUS            reduce using rule 49 (expression -> FALSE .)
    MINUS           reduce using rule 49 (expression -> FALSE .)
    LD              reduce using rule 49 (expression -> FALSE .)
    LDEQ            reduce using rule 49 (expression -> FALSE .)
    GD              reduce using rule 49 (expression -> FALSE .)
    GDEQ            reduce using rule 49 (expression -> FALSE .)
    EQUALEQUAL      reduce using rule 49 (expression -> FALSE .)
    NOTEQ           reduce using rule 49 (expression -> FALSE .)
    AND             reduce using rule 49 (expression -> FALSE .)
    OR              reduce using rule 49 (expression -> FALSE .)
    NEWLINE         reduce using rule 49 (expression -> FALSE .)
    $end            reduce using rule 49 (expression -> FALSE .)
    RPAREN          reduce using rule 49 (expression -> FALSE .)
    START           reduce using rule 49 (expression -> FALSE .)
    STOP            reduce using rule 49 (expression -> FALSE .)
    RETURN          reduce using rule 49 (expression -> FALSE .)


state 19

    (50) expression -> LBRACE . int_type_array RBRACE
    (51) expression -> LBRACE . float_type_array RBRACE
    (52) expression -> LBRACE . string_type_array RBRACE
    (53) expression -> LBRACE . bool_type_array RBRACE
    (54) int_type_array -> . empty
    (55) int_type_array -> . INT int_type_array
    (56) float_type_array -> . empty
    (57) float_type_array -> . FLOAT float_type_array
    (58) string_type_array -> . empty
    (59) string_type_array -> . STRING string_type_array
    (60) bool_type_array -> . empty
    (61) bool_type_array -> . TRUE bool_type_array
    (62) bool_type_array -> . FALSE bool_type_array
    (71) empty -> .

    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    STRING          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    RBRACE          reduce using rule 71 (empty -> .)

    int_type_array                 shift and go to state 47
    float_type_array               shift and go to state 48
    string_type_array              shift and go to state 49
    bool_type_array                shift and go to state 50
    empty                          shift and go to state 51

state 20

    (63) expression -> LPAREN . expression RPAREN
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression

    NAME            shift and go to state 58
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LBRACE          shift and go to state 19
    LPAREN          shift and go to state 20
    NOT             shift and go to state 26

    expression                     shift and go to state 57
    expression_operation           shift and go to state 13

state 21

    (13) func_assign -> datatype . NAME LPAREN parameters RPAREN START NEWLINE language return_stmt STOP

    NAME            shift and go to state 59


state 22

    (70) iterative -> WHILE . expression START NEWLINE language STOP
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression

    NAME            shift and go to state 58
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LBRACE          shift and go to state 19
    LPAREN          shift and go to state 20
    NOT             shift and go to state 26

    expression                     shift and go to state 60
    expression_operation           shift and go to state 13

state 23

    (64) conditional -> IF . expression START NEWLINE language STOP else_if_blocks else_block
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression

    NAME            shift and go to state 58
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LBRACE          shift and go to state 19
    LPAREN          shift and go to state 20
    NOT             shift and go to state 26

    expression                     shift and go to state 61
    expression_operation           shift and go to state 13

state 24

    (26) output -> output_print .

    NEWLINE         reduce using rule 26 (output -> output_print .)
    $end            reduce using rule 26 (output -> output_print .)
    STOP            reduce using rule 26 (output -> output_print .)
    RETURN          reduce using rule 26 (output -> output_print .)


state 25

    (25) input -> READ . LPAREN NAME RPAREN

    LPAREN          shift and go to state 62


state 26

    (44) expression_operation -> NOT . expression
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression

    NAME            shift and go to state 58
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LBRACE          shift and go to state 19
    LPAREN          shift and go to state 20
    NOT             shift and go to state 26

    expression                     shift and go to state 63
    expression_operation           shift and go to state 13

state 27

    (21) datatype -> INT_TYPE .

    NAME            reduce using rule 21 (datatype -> INT_TYPE .)


state 28

    (22) datatype -> FLOAT_TYPE .

    NAME            reduce using rule 22 (datatype -> FLOAT_TYPE .)


state 29

    (23) datatype -> STRING_TYPE .

    NAME            reduce using rule 23 (datatype -> STRING_TYPE .)


state 30

    (24) datatype -> VOID_TYPE .

    NAME            reduce using rule 24 (datatype -> VOID_TYPE .)


state 31

    (27) output_print -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 64


state 32

    (3) language -> language NEWLINE . line
    (5) line -> . expression
    (6) line -> . var_assign
    (7) line -> . func_assign
    (8) line -> . iterative
    (9) line -> . conditional
    (10) line -> . output
    (11) line -> . input
    (12) line -> . empty
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (29) var_assign -> . NAME EQUALS expression
    (13) func_assign -> . datatype NAME LPAREN parameters RPAREN START NEWLINE language return_stmt STOP
    (70) iterative -> . WHILE expression START NEWLINE language STOP
    (64) conditional -> . IF expression START NEWLINE language STOP else_if_blocks else_block
    (26) output -> . output_print
    (25) input -> . READ LPAREN NAME RPAREN
    (71) empty -> .
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression
    (21) datatype -> . INT_TYPE
    (22) datatype -> . FLOAT_TYPE
    (23) datatype -> . STRING_TYPE
    (24) datatype -> . VOID_TYPE
    (27) output_print -> . PRINT LPAREN expression RPAREN

    NAME            shift and go to state 12
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LBRACE          shift and go to state 19
    LPAREN          shift and go to state 20
    WHILE           shift and go to state 22
    IF              shift and go to state 23
    READ            shift and go to state 25
    NEWLINE         reduce using rule 71 (empty -> .)
    $end            reduce using rule 71 (empty -> .)
    STOP            reduce using rule 71 (empty -> .)
    RETURN          reduce using rule 71 (empty -> .)
    NOT             shift and go to state 26
    INT_TYPE        shift and go to state 27
    FLOAT_TYPE      shift and go to state 28
    STRING_TYPE     shift and go to state 29
    VOID_TYPE       shift and go to state 30
    PRINT           shift and go to state 31

    line                           shift and go to state 65
    expression                     shift and go to state 5
    var_assign                     shift and go to state 6
    func_assign                    shift and go to state 7
    iterative                      shift and go to state 8
    conditional                    shift and go to state 9
    output                         shift and go to state 10
    input                          shift and go to state 11
    empty                          shift and go to state 66
    expression_operation           shift and go to state 13
    datatype                       shift and go to state 21
    output_print                   shift and go to state 24

state 33

    (31) expression_operation -> expression MULTIPLY . expression
    (28) expression -> . NAME
    (30) expression -> . expression_operation
    (45) expression -> . INT
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . LBRACE int_type_array RBRACE
    (51) expression -> . LBRACE float_type_array RBRACE
    (52) expression -> . LBRACE string_type_array RBRACE
    (53) expression -> . LBRACE bool_type_array RBRACE
    (63) expression -> . LPAREN expression RPAREN
    (31) expression_operation -> . expression MULTIPLY expression
    (32) expression_operation -> . expression DIVIDE expression
    (33) expression_operation -> . expression MODULO expression
    (34) expression_operation -> . expression PLUS expression
    (35) expression_operation -> . expression MINUS expression
    (36) expression_operation -> . expression LD expression
    (37) expression_operation -> . expression LDEQ expression
    (38) expression_operation -> . expression GD expression
    (39) expression_operation -> . expression GDEQ expression
    (40) expression_operation -> . expression EQUALEQUAL expression
    (41) expression_operation -> . expression NOTEQ expression
    (42) expression_operation -> . expression AND expression
    (43) expression_operation -> . expression OR expression
    (44) expression_operation -> . NOT expression
